# hackathon-talent-arena

./: .env-example  .gitignore  LICENSE  README.md  main.py  pyproject.toml
configs/: eval_llm_judge.yaml  infer_l4.yaml  preprocess.yaml  train_l4.yaml
data/: dataset_sample.json  validation_dataset_sample.json
src/l4_qlora_judge/: __init__.py  common.py  eval_pydantic_evals.py  infer_submission.py  models.py  preprocess.py  promptnoises.py  prompts.py  train.py
