[project]
name = "lora-judge"
version = "0.1.0"
description = "QLoRA pipeline for training and evaluating LLMs on judge tasks."
requires-python = ">=3.11"
dependencies = [
  "accelerate",
  "bitsandbytes",
  "datasets",
  "ipykernel",
  "matplotlib",
  "numpy==1.26.4",
  "pandas",
  "peft",
  "pyarrow",
  "pydantic>=2.10.0",
  #"pydantic-ai-slim[openai]>=0.0.25",
  "pydantic-evals>=0.0.25",
  "python-dotenv",
  "pyyaml",
  "scikit-learn==1.5.2",
  "seaborn",
  "sentencepiece==0.1.99",
  "torch==2.5.1",
  "torchaudio==2.5.1",
  "torchvision==0.20.1",
  "transformers",
  "trl"
]

[project.scripts]
judge-train = "l4_qlora_judge.train:main"
judge-infer = "l4_qlora_judge.infer_submission:main"
judge-eval = "l4_qlora_judge.eval_pydantic_evals:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/l4_qlora_judge"]

[tool.uv]
package = true
